// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input > rtl render > component should be rendered correctly in RTL direction 1`] = `
<input
  class="ant-input ant-input-rtl ant-input-outlined css-var-root ant-input-css-var"
  type="text"
  value=""
/>
`;

exports[`Input > rtl render > component should be rendered correctly in RTL direction 2`] = `null`;

exports[`Input > should support maxLength 1`] = `
<input
  class="ant-input ant-input-outlined css-var-root ant-input-css-var"
  maxlength="3"
  type="text"
  value=""
/>
`;

exports[`Input > should support size 1`] = `
<input
  class="ant-input ant-input-lg ant-input-outlined css-var-root ant-input-css-var"
  type="text"
  value=""
/>
`;

exports[`Input > should support size in form 1`] = `
<form
  class="ant-form ant-form-horizontal ant-form-large css-var-root ant-form-css-var"
>
  <div
    class="ant-form-item css-var-root ant-form-css-var ant-form-item-horizontal"
  >
    <div
      class="ant-row ant-form-item-row css-var-root"
    >
      <div
        class="ant-col ant-form-item-control css-var-root"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <input
              class="ant-input ant-input-lg ant-input-outlined css-var-root ant-input-css-var"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Input allowClear > semantic dom snapshot 1`] = `
<div>
  <span
    class="ant-input-affix-wrapper ant-input-outlined custom-class css-var-root ant-input-css-var"
    style="background-color: red;"
  >
    <span
      class="ant-input-prefix custom-prefix"
      style="color: blue;"
    >
      prefix
    </span>
    <input
      class="ant-input custom-input"
      style="color: red;"
      type="text"
      value="123"
    />
    <span
      class="ant-input-suffix custom-suffix"
      style="color: yellow;"
    >
      <span
        class="ant-input-show-count-suffix ant-input-show-count-has-suffix custom-count"
        style="color: green;"
      >
        3
      </span>
      suffix
    </span>
  </span>
  <span
    class="ant-input-group-wrapper ant-input-group-wrapper-outlined custom-class css-var-root ant-input-css-var"
    style="background-color: red;"
  >
    <span
      class="ant-input-wrapper ant-input-group"
    >
      <span
        class="ant-input-affix-wrapper ant-input-outlined"
      >
        <span
          class="ant-input-prefix custom-prefix"
          style="color: blue;"
        >
          prefix
        </span>
        <input
          class="ant-input custom-input"
          style="color: red;"
          type="text"
          value="123"
        />
        <span
          class="ant-input-suffix custom-suffix"
          style="color: yellow;"
        >
          <span
            class="ant-input-show-count-suffix ant-input-show-count-has-suffix custom-count"
            style="color: green;"
          >
            3
          </span>
          suffix
        </span>
      </span>
      <span
        class="ant-input-group-addon"
      >
        addon
      </span>
    </span>
  </span>
  <input
    class="ant-input custom-input ant-input-outlined custom-class css-var-root ant-input-css-var"
    style="color: red; background-color: red;"
    type="text"
    value="123"
  />
  <span
    class="ant-input-group-wrapper ant-input-group-wrapper-outlined custom-class css-var-root ant-input-css-var"
    style="background-color: red;"
  >
    <span
      class="ant-input-wrapper ant-input-group"
    >
      <input
        class="ant-input custom-input ant-input-outlined"
        style="color: red;"
        type="text"
        value="123"
      />
      <span
        class="ant-input-group-addon"
      >
        addon
      </span>
    </span>
  </span>
</div>
`;
